declarative_approach/manifests/log-output-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
spec:
  selector:
    app: log-output
  ports:
    - protocol: TCP
      port: 2346
      targetPort: 8000
  type: ClusterIP
