declarative_approach/manifests/log-output-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-ingress
spec:
  rules:
  - http:
        paths:
          - path: /status
            pathType: Prefix
            backend:
              service:
                name: log-output-svc
                port:
                  number: 2346
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: ping-pong-svc
                port:
                  number: 2348
